added foot task hierarchy trajectory manager.

--- a/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -49,8 +49,8 @@ task_parameters:
     w_task_ang_mom: 1e-6 
     w_task_pelvis: 10.0
     w_task_upper_body: 20.0
-    w_task_rfoot: 40.0
-    w_task_lfoot: 40.0
+    w_task_foot_contact: 40.0
+    w_task_foot_swing: 20.0 
 
     # Task Gains
     # COM
