--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -1,9 +1,10 @@
-add_subdirectory(ValkyriePnC)
 add_subdirectory(WBC)
 add_subdirectory(Planner)
 add_subdirectory(TrajectoryManager)
 add_subdirectory(RobotSystem)
 add_subdirectory(Filter)
+add_subdirectory(DracoPnC)
+add_subdirectory(ValkyriePnC)
 
 file(GLOB pnc_headers "*.hpp")
 install(FILES ${pnc_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/PnC")
