yaml reading passed

--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -80,3 +80,6 @@ task_parameters:
     kd_foot_pos: [40, 40, 40]
     kp_foot_ori: [400, 400, 400]
     kd_foot_ori: [40, 40, 40]
+    # Joint
+    kp_joint: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
+    kd_joint: [5., 5., 5., 5., 5., 5., 5., 5., 5., 5.]
