--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,7 +1,8 @@
 is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 num_steps_per_cycle: 30
-hanging_height: 0.8729 #0.83
+#hanging_height: 0.8729 #0.83
+hanging_height: 0.89 #0.83
 display_joint_frame: false
 joint_limit_enforced: true
 initial_configuration: [0., 0., -0.785, 1.3565, 1.0, 0., 0, -0.785, 1.3565, 1.0]
