--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -14,8 +14,8 @@ state_swing:
 dcm_planner_parameters:
     nominal_com_height: 0.7 # m from the ground
 
-    t_additional_init_transfer: 0.0 # seconds. The additional initial transfer time to switch the stance leg
-    t_contact_transition: 0.06 # seconds. The transition time used to change reaction forces and stance leg
+    t_additional_init_transfer: 0.175 # seconds. The additional initial transfer time to switch the stance leg
+    t_contact_transition: 0.035 # seconds. The transition time used to change reaction forces and stance leg
     t_swing: 0.27 # seconds. The single support swing time.
     percentage_settle: 0.9 # percent to converge at the end of the trajectory
     alpha_ds: 0.5 # value between 0.0 and 1.0 for double support DCM interpolation    
@@ -70,16 +70,18 @@ task_parameters:
 
     # Task Gains
     # COM
-    kp_com: [100, 100, 100] 
-    kd_com: [10, 10,10] 
+    #kp_com: [200, 200, 200]
+    #kd_com: [15, 15, 15]
+    kp_com: [200, 200, 200]
+    kd_com: [15, 55, 15]
     # Pelvis
     kp_base_ori: [5, 5, 5]
     kd_base_ori: [20, 20, 20]
     # Foot Linear and orientation gains
     kp_foot_pos: [400, 400, 400]
-    kd_foot_pos: [30, 30, 30]
-    kp_foot_ori: [400, 400, 400]
-    kd_foot_ori: [30, 30, 30]
+    kd_foot_pos: [40, 40, 40]
+    kp_foot_ori: [200, 200]
+    kd_foot_ori: [20, 20]
     # Joint
     kp_joint: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
     kd_joint: [5., 5., 5., 5., 5., 5., 5., 5., 5., 5.]
