--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -1,16 +1,27 @@
 service_call:
-    jp_kp             : [20  , 20   , 20   , 20   , 10  , 20  , 20   , 20   , 20   ,  10.]
-    jp_kd             : [2  ,  2   ,  2   ,  2   ,  1.  ,  2  ,  2   ,  2   ,  2   ,  1.]
+    jp_kp             : [0.  , 0.   , 0.   , 0.   , 0.  , 0.  , 0.   , 0.   , 0.   , 0.]
+    jp_kd             : [0.  , 0.   , 0.   , 0.   , 0.  , 0.  , 0.   , 0.   , 0.   , 0.]
     t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
     t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
     en_auto_kd        : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
     en_dob            : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
     rotor_inertia     : [20. , 120. , 120. , 510. , 20. , 20. , 120. , 120. , 510. , 20.]
     temperature_limit : [110 , 110  , 110  , 110  , 110 , 110 , 110  , 110  , 110  , 350]
-    current_limit     : [8   , 20   , 19   , 22   , 15   , 8   , 20   , 19   , 22   , 15]
+    current_limit     : [8   , 20   , 19   , 22   , 15  , 8   , 20   , 19   , 22   , 15]
 
 #service_call:
-    #jp_kp             : [50  , 95   , 95   , 95   , 100  , 50  , 95   , 95   , 95   ,  100.]
+    #jp_kp             : [20  , 20   , 20   , 20   , 10  , 20  , 20   , 20   , 20   , 10.]
+    #jp_kd             : [4   , 4    , 4    , 4    , 2.  , 4   , 4    , 4    , 4    , 2.]
+    #t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #en_auto_kd        : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #en_dob            : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #rotor_inertia     : [20. , 120. , 120. , 510. , 20. , 20. , 120. , 120. , 510. , 20.]
+    #temperature_limit : [110 , 110  , 110  , 110  , 110 , 110 , 110  , 110  , 110  , 350]
+    #current_limit     : [8   , 20   , 19   , 22   , 15  , 8   , 20   , 19   , 22   , 15]
+
+#service_call:
+    #jp_kp             : [50  , 95   , 95   , 95   , 10  , 50  , 95   , 95   , 95   ,  10.]
     #jp_kd             : [5  ,  8   ,  8   ,  8   ,  2.  ,  5  ,  8   ,  8   ,  8   ,  2.]
     #t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
     #t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
