--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -73,10 +73,12 @@ task_parameters:
 
     # Task Gains
     # COM
-    #kp_com: [13, 13, 80]
-    #kd_com: [2, 2, 10]
-    kp_com: [53, 53, 80]
-    kd_com: [5, 5, 10]
+    #kp_com: [13, 40, 80] ## Max gain
+    #kd_com: [2, 3, 10]
+    #kp_com: [13, 40, 80] ## Exp gain
+    #kd_com: [1, 1, 10]
+    kp_com: [100, 100, 100] ## Works in sim
+    kd_com: [15, 15, 15]
     # Pelvis
     kp_base_ori: [10, 10, 10]
     kd_base_ori: [4, 4, 4]
