--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -62,7 +62,7 @@ task_parameters:
     ini_w_task_foot_ori: 0.
 
     max_w_task_com: 5e-2
-    max_w_task_base_ori: 5e-2
+    max_w_task_base_ori: 1e-2
     max_w_task_foot_pos: 1.
     max_w_task_foot_ori: 1.
 
@@ -73,17 +73,15 @@ task_parameters:
 
     # Task Gains
     # COM
-    #kp_com: [13, 40, 80] ## Max gain
-    #kd_com: [2, 3, 10]
     #kp_com: [13, 40, 40] ## Exp gain
     #kd_com: [1, 2, 3]
-    kp_com: [100, 100, 100] ## Works in sim
-    kd_com: [15, 15, 15]
+    kp_com: [200, 200, 200] ## Work in Sim
+    kd_com: [20, 20, 20]
     # Pelvis
-    kp_base_ori: [10, 10, 10]
-    kd_base_ori: [4, 4, 4]
-    #kp_base_ori: [20, 20]
-    #kd_base_ori: [8, 8]
+    #kp_base_ori: [10, 10, 10] ## Exp gain
+    #kd_base_ori: [4, 4, 4]
+    kp_base_ori: [40, 40, 40] ## Work in Sim
+    kd_base_ori: [15, 15, 15]
     # Foot Linear and orientation gains
     kp_foot_pos: [200, 200, 200]
     kd_foot_pos: [20, 20, 20]
