--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -73,20 +73,28 @@ task_parameters:
 
     # Task Gains
     # COM
-    #kp_com: [13, 40, 40] ## Exp gain
-    #kd_com: [1, 2, 3]
-    kp_com: [200, 200, 200] ## Work in Sim
-    kd_com: [20, 20, 20]
+    kp_com: [30 , 50., 50.] # EXP
+    kd_com: [3.3, 2.5, 2.5]
+    #kp_com: [30 , 50., 50.] # OSCILATION
+    #kd_com: [1., 1., 2.5]
+    #kp_com: [100 , 100 , 100] # SIM
+    #kd_com: [30.  , 30.  , 30.]
     # Pelvis
-    #kp_base_ori: [10, 10, 10] ## Exp gain
-    #kd_base_ori: [4, 4, 4]
-    kp_base_ori: [40, 40, 40] ## Work in Sim
-    kd_base_ori: [15, 15, 15]
+    #kp_base_ori: [50. , 50. , 50.]
+    #kd_base_ori: [2.5 , 2.5 , 2.5]
+    kp_base_ori: [70. , 70. , 70.]
+    kd_base_ori: [3.5, 3.5, 3.5]
+    #kp_base_ori: [100  , 100  , 100] # SIM
+    #kd_base_ori: [30   , 30   , 30]
     # Foot Linear and orientation gains
-    kp_foot_pos: [200, 200, 200]
-    kd_foot_pos: [20, 20, 20]
-    kp_foot_ori: [200, 200]
-    kd_foot_ori: [20, 20]
+    #kp_foot_pos: [200. , 200. , 200.]
+    #kd_foot_pos: [20.  , 20.  , 20.]
+    #kp_foot_ori: [200. , 200.]
+    #kd_foot_ori: [20.  , 20.]
+    kp_foot_pos: [100. , 100. , 100.]
+    kd_foot_pos: [3.5 , 3.5 , 3.5]
+    kp_foot_ori: [100. , 100.]
+    kd_foot_ori: [3.5  , 3.5]
     # Joint
     kp_joint: [100. , 100. , 100. , 100. , 50. , 100. , 100. , 100. , 100. , 50.]
     kd_joint: [20.  , 20.  , 20.  , 20.  , 10. , 20.  , 20.  , 20.  , 20.  , 10.]
