--- a/PnC/WBC/CMakeLists.txt
+++ b/PnC/WBC/CMakeLists.txt
@@ -1,7 +1,10 @@
 FILE(GLOB sources *.cpp)
 FILE(GLOB wbc_headers "*.hpp")
+FILE(GLOB wblc_sources "WBLC/*.cpp")
 
-add_library(myWBC SHARED ${sources})
+add_library(myWBC SHARED ${sources}
+                         ${wbc_headers}
+                         ${wblc_sources})
 
 target_link_libraries(myWBC myUtils
                             myGoldfarb
@@ -10,3 +13,7 @@ target_link_libraries(myWBC myUtils
 install(TARGETS myWBC DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${wbc_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/WBC")
+install(FILES ${wblc_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/WBC/WBLC")
+install(FILES ${wbdc_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/WBC/WBDC")
