--- a/Config/Draco/TEST/WALKING_PARAMS.yaml
+++ b/Config/Draco/TEST/WALKING_PARAMS.yaml
@@ -51,15 +51,15 @@ controller_parameters:
     position_freq_cutoff: 1.0 #Hz
     max_position_error: 0.2 # radians
     # WBLC parameters
-    lambda_xddot: 1000.0
-    lambda_qddot: 100.0
-    lambda_rf: 0.01
+    lambda_xddot: 100.0
+    lambda_qddot: 10.0
+    lambda_rf: 0.1
     # Enable limits
     enable_torque_limits: true
     # Kp: [ 150 , 150 , 150 , 150 , 5 , 150 , 150 , 150 , 150 , 5 ]
     # Kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 8   , 8   , 0 ]
-    Kp: [ 100 , 100 , 100 , 100 , 5 , 100 , 100 , 100 , 100 , 5 ]
-    Kd: [ 4   , 4   , 4   , 4   , 0 , 4   , 4   , 4   , 4   , 0 ]
+    Kp: [ 100, 100, 100, 100, 70, 100, 100, 100, 100, 70]
+    Kd: [ 10, 10, 10, 10, 3,10, 10, 10, 10, 3]
 
 task_parameters:
     # Maximum normal force
@@ -84,19 +84,21 @@ task_parameters:
 
     # Task Gains
     # COM
-    kp_com: [30 , 50., 50.] # EXP
-    kd_com: [3.3, 2.5, 2.5]
+    #kp_com: [30 , 50., 50.] # EXP
+    #kd_com: [3.3, 2.5, 2.5]
     #kp_com: [30 , 50., 50.] # OSCILATION
     #kd_com: [1., 1., 2.5]
-    #kp_com: [100 , 100 , 100] # SIM
-    #kd_com: [30.  , 30.  , 30.]
+    kp_com: [100 , 100 , 100] # SIM
+    kd_com: [30.  , 30.  , 30.]
+    #kp_com: [1000.,1000.,100.] # SIM2
+    #kd_com: [100., 100., 10.]
     # Pelvis
     #kp_base_ori: [50. , 50. , 50.]
     #kd_base_ori: [2.5 , 2.5 , 2.5]
-    kp_base_ori: [70. , 70. , 70.]
-    kd_base_ori: [3.5, 3.5, 3.5]
-    #kp_base_ori: [100  , 100  , 100] # SIM
-    #kd_base_ori: [30   , 30   , 30]
+    #kp_base_ori: [70. , 70. , 70.]
+    #kd_base_ori: [3.5, 3.5, 3.5]
+    kp_base_ori: [100  , 100  , 100] # SIM
+    kd_base_ori: [30   , 30   , 30]
     # Foot Linear and orientation gains
     #kp_foot_pos: [200. , 200. , 200.]
     #kd_foot_pos: [20.  , 20.  , 20.]
