--- a/Simulator/Dart/A1/CMakeLists.txt
+++ b/Simulator/Dart/A1/CMakeLists.txt
@@ -2,5 +2,5 @@ file(GLOB srcs "*.cpp" "*.hpp")
 
 add_executable(run_a1 ${srcs})
 target_link_libraries(run_a1 ${DART_LIBRARIES}
-#                                 A1PnC
+                                A1PnC
                                 myUtils)
