--- a/Addition/DataManager/CMakeLists.txt
+++ b/Addition/DataManager/CMakeLists.txt
@@ -13,9 +13,9 @@ endif()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../cmake")
 if(NOT EIGEN_FOUND)
-  find_package(Eigen)
+  find_package(Eigen3)
 endif()
-include_directories(${EIGEN_INCLUDE_DIRS})
+include_directories(${EIGEN3_INCLUDE_DIRS})
 
 
 message ("")
