--- a/Addition/DataManager/CMakeLists.txt
+++ b/Addition/DataManager/CMakeLists.txt
@@ -12,10 +12,10 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../cmake")
-if(NOT EIGEN_FOUND)
-  find_package(Eigen)
+if(NOT EIGEN3_FOUND)
+  find_package(Eigen3)
 endif()
-include_directories(${EIGEN_INCLUDE_DIRS})
+include_directories(${EIGEN3_INCLUDE_DIRS})
 
 
 message ("")
