--- a/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -38,15 +38,15 @@ task_parameters:
 
     # Task Gains
     # COM
-    kp_com: [50, 50, 50] 
-    kd_com: [5, 5,5] 
+    kp_com: [100, 100, 100] 
+    kd_com: [10, 10, 10] 
     # Base Orientation
-    kp_base_ori: [50, 50, 50]
-    kd_base_ori: [5, 5, 5]
+    kp_base_ori: [100, 100, 100]
+    kd_base_ori: [10, 10, 10]
     # Foot Linear and orientation gains
-    kp_foot_pos: [400, 400, 400]
-    kd_foot_pos: [40, 40, 40]
+    kp_foot_pos: [100, 100, 100]
+    kd_foot_pos: [10, 10, 10]
     # Joint
-    kp_joint: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
-    kd_joint: [2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.]
+    kp_joint: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
+    kd_joint: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
 
