--- a/PnC/A1PnC/CMakeLists.txt
+++ b/PnC/A1PnC/CMakeLists.txt
@@ -16,7 +16,8 @@ target_link_libraries(A1PnC ${DART_LIBRARIES}
                                myWBC
                                myTrajectoryManager
                                myFilters
-                               myPlanner)
+                               myPlanner
+                               myMPC)
 
 install(TARGETS A1PnC DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${a1_pnc_headers} DESTINATION
