--- a/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -4,8 +4,11 @@ state_stand_params:
     target_height: 0.25 # target com position from the midfoot position in world frame
 
 state_swing:
-    swing_time_percent_early_contact_check: 0.5 # Percent of end_time to check if there are early contacts 
+    swing_time_percent_early_contact_check: 0.75 # Percent of end_time to check if there are early contacts 
     early_contact_force_threshold: 10 # Exit swing when 10 Newtons have been detected on the foot contact sensor
+
+state_contact_transition:
+    ramp_time: 0.15 # time to ramp to max or reduce to 0 normal force
 
 foot_trajectory_parameters:
     swing_height: 0.05 # cm off the ground
