--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -4,8 +4,8 @@ add_subdirectory(Planner)
 add_subdirectory(TrajectoryManager)
 add_subdirectory(RobotSystem)
 add_subdirectory(Filter)
-add_subdirectory(DracoPnC)
-add_subdirectory(ValkyriePnC)
+# add_subdirectory(DracoPnC)
+# add_subdirectory(ValkyriePnC)
 add_subdirectory(A1PnC)
 
 file(GLOB pnc_headers "*.hpp")
