1)Finish FloatingBaseTM->updateFloatingBaseWalkingDesired(). 2) State machine updated to manage the leg state instead of gait scheduler. 3) remove the gait scheduler from the A1CtrlArchitecture. 4) Added some notes to DracoStateEstimator + A1Ctrl Architrecture regarding state estimation and footstep planning respectively

--- a/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -4,6 +4,7 @@ state_stand_params:
     target_height: 0.25 # target com position from the midfoot position in world frame
 
 state_swing:
+    swing_duration: 0.3
     swing_time_percent_early_contact_check: 0.75 # Percent of end_time to check if there are early contacts 
     early_contact_force_threshold: 10 # Exit swing when 10 Newtons have been detected on the foot contact sensor
 
