plotting tools/data updated to get rxn forces from mpc and wbic

--- a/ExternalSource/CMakeLists.txt
+++ b/ExternalSource/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(myYaml)
 add_subdirectory(myCDD)
 add_subdirectory(myOptimizer)
+add_subdirectory(myOdometry)
 if(USE_PYBIND11)
   add_subdirectory(pybind11)
 endif()
